<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/rajshahi"
            android:icon="@drawable/ic_rajsahi"
            android:title="@string/r"/>


        <item
            android:id="@+id/chittagong"
            android:icon="@drawable/ic_rajsahi"
            android:title="চট্টগ্রাম" />
        <item
            android:id="@+id/dhaka"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/d" />
        <item
            android:id="@+id/borishal"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/b" />
        <item
            android:id="@+id/khulna"
            android:icon="@drawable/background"
            android:title="@string/kh" />
        <item
            android:id="@+id/rangpur"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/ro" />
        <item
            android:id="@+id/sylhet"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/sy" />
        <item
            android:id="@+id/moymonshing"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/moy" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
